Adding props to trello components WIP

--- a/css/index.less
+++ b/css/index.less
@@ -12,6 +12,12 @@ body {
   }
 }
 
+.highlight {
+  background-color: lime-green;
+  font-size: 3em;
+  -webkit-transition: all 3s ease;
+}
+
 // .person {
 //     width: 200px;
 //     text-align: center;
